--- a/model.ipynb
+++ b/model.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
     }
    ],
    "source": [
-    "# Check skewness after the tranformation\n",
+    "# Check skewness after the transformation\n",
     "df.skew()"
    ]
   },
